[tool.poetry]
name = "alex_project"
version = "0.1.0"
description = ""
authors = ["painassasin <painassasin@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.2"
Faker = "^15.3.3"
requests-tor = "^1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
